--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1538,29 +1538,37 @@ section {
 /*Buscar*/
 .search-form .input-group {
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 50px;
+    border-radius: 8px;
     overflow: hidden;
+    max-width: 400px; /* Limitar el ancho máximo */
+    margin: 0 auto;
 }
 
 .search-form .form-control {
-    border: none;
-    padding-left: 1.5rem;
-    height: 50px;
-    border-radius: 50px 0 0 50px;
+    border: 1px solid #ced4da;
+    padding: 8px 15px;
+    height: 40px;
+    font-size: 14px;
+    border-radius: 8px 0 0 8px;
 }
 
 .search-form .btn {
-    padding: 0 1.5rem;
+    padding: 8px 15px;
     border: none;
-    border-radius: 0;
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .search-form .btn:last-child {
-    border-radius: 0 50px 50px 0;
+    border-radius: 0 8px 8px 0;
 }
 
 .search-form .form-control:focus {
     box-shadow: none;
+    border-color: #4b0082;
 }
 
 .table-hover tbody tr:hover {
