--- a/public/css/index.css
+++ b/public/css/index.css
@@ -57,7 +57,8 @@
   -webkit-backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.2);
   color: white;
-  padding: 0.5rem 2.5rem;
+  padding: 0.5rem 0.5rem;
+  justify-content: center;
   border-radius: 50px;
   font-weight: 600;
   letter-spacing: 0.5px;
