--- a/public/css/productos.css
+++ b/public/css/productos.css
@@ -48,21 +48,21 @@
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.crear-producto {
+.productos_crear {
   background: linear-gradient(45deg, #673ab7, #512da8);
   border: none;
   color: white;
-  padding: 0.5rem 0.6rem;
+  padding: 0.5rem 0;
   font-weight: 600;
   letter-spacing: 0.5px;
   border-radius: 50px;
   text-transform: uppercase;
-  font-size: 0.9rem;
+  font-size: 0.5rem;
   display: flex;
   align-items: center;
   margin: 1rem auto;
   justify-content: center;
-  box-shadow: 0 4px 15px rgba(103, 58, 183, 0.3);
+  box-shadow: 0 4px 10px rgba(103, 58, 183, 0.3);
   width: fit-content;
 }
 
@@ -72,17 +72,16 @@
   border-bottom-left-radius: 0;
 }
 
-.crear-producto:hover {
+.productos_crear:hover {
   transform: translateY(-2px);
-  box-shadow: 0 8px 20px rgba(103, 58, 183, 0.4);
+  box-shadow: 0 8px 10px rgba(103, 58, 183, 0.4);
   background: linear-gradient(45deg, #512da8, #673ab7);
 }
 
-.crear-producto i {
+.productos_crear i {
   font-size: 1.1rem;
   margin-right: 0.5rem;
 }
-
 
 .productos_editar .crear-producto-btn:hover {
   transform: translateY(-2px);
